Fix modal overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -710,7 +710,7 @@ th:last-child, td:last-child {
     font-size: 14px;
 }
 
-@media only screen and (min-width: 350px) {
+@media only screen and (min-width: 390px) {
     .modal-card {
         padding: 30px;
     }
